# mineral-dataset

./: .gitignore  READEME.md  README.md  pyproject.toml
notebooks/: dataset_overview.ipynb  mineralimage-oneshot.ipynb  mineralimage5k-98.ipynb
