[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimg5k"
version = "0.1.0"
requires-python = ">=3.8"
license  = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "ipykernel",
    "pandas",
    "pillow",
    "datasets"
]

[project.optional-dependencies]
